feat: add insert function
