# comment/model.go
@@ -1,25 +1,29 @@
 package comment
 
 import (
+	"context"
+	"os"
 	"time"
 
 	"github.com/rs/xid"
+	"github.com/seagalputra/talkbox/config"
 )
 
 type (
 	CommentColumns []string
 
 	Comment struct {
-		ID           string `db:"id"`
-		ParentID     string `db:"parent_id"`
-		Body         string `db:"body"`
-		Attachment   string `db:"attachment"`
-		LikeCount    int    `db:"like_count"`
-		DislikeCount int    `db:"dislike_count"`
-		ModeratedBy  string `db:"moderated_by"`
-		CreatedAt    string `db:"created_at"`
-		UpdatedAt    string `db:"updated_at"`
-		DeletedAt    string `db:"deleted_at"`
+		ID           string  `db:"id"`
+		ParentID     *string `db:"parent_id"`
+		PostID       string  `db:"post_id"`
+		Body         string  `db:"body"`
+		Attachment   *string `db:"attachment"`
+		LikeCount    int     `db:"like_count"`
+		DislikeCount int     `db:"dislike_count"`
+		ModeratedBy  string  `db:"moderated_by"`
+		CreatedAt    string  `db:"created_at"`
+		UpdatedAt    string  `db:"updated_at"`
+		DeletedAt    *string `db:"deleted_at"`
 	}
 )
 
@@ -27,6 +31,7 @@ var (
 	Columns = CommentColumns{
 		"id",
 		"parent_id",
+		"post_id",
 		"body",
 		"attachment",
 		"like_count",
@@ -38,13 +43,18 @@ var (
 	}
 )
 
-func New(parentID, body, attachment, moderatedBy string, likeCount, dislikeCount int) Comment {
+const (
+	SHEET_NAME = "comments"
+)
+
+func New(parentID *string, postID string, body string, attachment *string, moderatedBy string, likeCount, dislikeCount int) Comment {
 	guid := xid.New()
 	now := time.Now().Format(time.RFC3339)
 
 	return Comment{
 		ID:           guid.String(),
 		ParentID:     parentID,
+		PostID:       postID,
 		Body:         body,
 		Attachment:   attachment,
 		LikeCount:    likeCount,
@@ -55,8 +65,27 @@ func New(parentID, body, attachment, moderatedBy string, likeCount, dislikeCount
 	}
 }
 
-func Save(commentReq InsertCommentReq) error {
-	panic("Not implemented yet!")
+func Save(postID string, commentReq InsertCommentReq) (*Comment, error) {
+	spreadsheetID := os.Getenv("SPREADSHEET_ID")
+	store := config.GetSheetDB(spreadsheetID, SHEET_NAME, Columns)
+	defer store.Close(context.Background())
+
+	comment := New(
+		commentReq.ParentID,
+		postID,
+		commentReq.Body,
+		commentReq.Attachment,
+		"user", // TODO: change to real user
+		0,
+		0,
+	)
+
+	err := store.Insert(comment).Exec(context.Background())
+	if err != nil {
+		return nil, err
+	}
+
+	return &comment, nil
 }
 
 func FindAll() ([]Comment, error) {
