# docs/swagger.json
@@ -17,7 +17,7 @@
     "host": "localhost:3000",
     "basePath": "/api",
     "paths": {
-        "/comments": {
+        "/comments/{post_id}": {
             "post": {
                 "description": "create a new comment based on post slug",
                 "consumes": [
@@ -31,6 +31,13 @@
                 ],
                 "summary": "Insert a new comment",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Post identifier",
+                        "name": "post_id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "Insert comment request body",
                         "name": "request",
@@ -91,12 +98,47 @@
                 },
                 "body": {
                     "type": "string"
+                },
+                "parent_id": {
+                    "type": "string"
                 }
             }
         },
         "comment.InsertCommentRes": {
             "type": "object",
             "properties": {
+                "data": {
+                    "type": "object",
+                    "properties": {
+                        "attachment": {
+                            "type": "string"
+                        },
+                        "body": {
+                            "type": "string"
+                        },
+                        "created_at": {
+                            "type": "string"
+                        },
+                        "dislike_count": {
+                            "type": "integer"
+                        },
+                        "id": {
+                            "type": "string"
+                        },
+                        "like_count": {
+                            "type": "integer"
+                        },
+                        "parent_id": {
+                            "type": "string"
+                        },
+                        "post_id": {
+                            "type": "string"
+                        },
+                        "updated_at": {
+                            "type": "string"
+                        }
+                    }
+                },
                 "message": {
                     "type": "string"
                 },
